--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "xml2js": "^0.4.19"
   }
 }
