--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest",
+    "test:coverage": "cross-env HSS_COVERAGE=true jest"
   },
   "author": "Guillaume Renault",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "babel": "^6.23.0",
+    "babel-jest": "^24.3.0",
     "babel-loader": "^8.0.4",
+    "cross-env": "^5.2.0",
+    "jest": "^24.3.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
